<resources>
    <string name="app_name">MoneyApp</string>
    <string name="card_type_title">Карта</string>
    <string name="cash_type_title">Наличные</string>
    <string name="asset_type">Тип счёта</string>
    <string name="assets">Ваши счета</string>
    <string name="new_asset">Новый счёт</string>
    <string name="categories">Категории</string>
    <string name="asset_name">Наименование счёта</string>
    <string name="asset_balance">Текущий баланс</string>
    <string name="create_asset">Создать счёт</string>
    <string name="error_required">Это обязательное поле</string>
    <string name="error_counter">Слишком длинное значение</string>
    <string name="error_incorrect">Некорректное значение</string>
    <string name="error_big">Слишком большое значение</string>
    <string name="error_small">Слишком маленькое значение</string>
    <string name="rub_suffix">руб.</string>
    <string name="create">Создать</string>
    <string name="edit">Изменить</string>
    <string name="edit_asset">Изменить счёт</string>
    <string name="new_transaction">Новая транзакция</string>
    <string name="delete_asset">Удалить счёт</string>
    <string name="asset_menu_title">Выберите действие</string>
    <string name="confirm_dialog_title">Подтвердите действие</string>
    <string name="delete_asset_message">Вы действительно хотите навсегда удалить этот счёт?</string>
    <string name="cancel">Отмена</string>
    <string name="delete">Удалить</string>
    <string name="snackbar_asset_deleted">Счёт удалён</string>
    <string name="count_format">Всего: %s</string>
    <string name="category_name">Название категории</string>
    <string name="edit_category">Изменить категорию</string>
    <string name="delete_category">Удалить категорию</string>
    <string name="delete_category_message">Вы действительно хотите навсегда удалить эту категорию?</string>
    <string name="snackbar_category_deleted">Категория удалена</string>
    <string name="history">История</string>
    <string name="transaction_title">Описание</string>
    <string name="transaction_amount">Сумма</string>
    <string name="category">Категория</string>
    <string name="transfer_action">Перевести на другой счёт</string>
    <string name="transfer_category">Перевод между счетами</string>
    <string name="transfer">Перевод</string>
    <string name="all_time">За всё время</string>
    <string name="edit_shared_transition_name">edit_transition</string>
    <string name="transactions">Транзакции</string>
    <string name="asset_details_transition_name">asset_details_%d</string>
    <string name="create_transaction">Добавить транзакцию</string>
    <string name="add_transaction_transition_name">add_transaction</string>
    <string name="transfer_transition_name">transfer</string>
    <string name="create_category">Создать категорию</string>
    <string name="new_category">Новая категория</string>
    <string name="category_details_transition_name">category_details</string>
    <string name="edit_category_transition_name">edit_category</string>
    <string name="credit">Зачисление</string>
    <string name="debit">Списание</string>
    <string name="subscription_type">Тип автоплатежа</string>
    <string name="subscriptions">Автоплатежи</string>
    <string name="subscriptions_transition_name">subscriptions_list</string>
    <string name="new_subscription">Новый автоплатёж</string>
    <string name="subscription_name">Описание</string>
    <string name="subscription_amount">Сумма</string>
    <string name="create_subscription">Создать автоплатёж</string>
    <string name="edit_subscription">Изменить автоплатёж</string>
    <string name="subscription_day">День автоплатежа</string>
    <string name="error_subscription_day">Некорректный день</string>
    <string name="delete_subscription">Удалить автоплатёж</string>
    <string name="delete_subscription_message">Вы действительно хотите удалить этот автоплатёж?</string>
    <string name="snackbar_subscription_deleted">Автоплатёж удалён</string>
    <string name="subscription">Автоплатеж</string>
    <string name="update_subscriptions">Обновление автоплатежей…</string>
    <string name="history_limit">Лимит истории</string>
    <string name="save">Сохранить</string>
    <string name="limit_saved">Лимит сохранён</string>
    <string name="small_limit">Минимальный лимит: %s</string>
    <string name="big_limit">Максимальный лимит: %s</string>
    <string name="item_details_transition_name">item_details_transition%s</string>
    <string name="day">День</string>
    <string name="week">Неделя</string>
    <string name="month">Месяц</string>
    <string name="year">Год</string>
    <string name="subscriptions_updated">Выполнено автоплатежей: %d</string>
    <string name="credit_line">Зачислено: %s</string>
    <string name="debit_line">Списано: %s</string>
    <string name="negative_transaction_title">Отрицательный баланс</string>
    <string name="negative_transaction_message">
        Эта транзакция приведёт к отрицательному балансу на Вашем счёте.
        Вы действительно хотите добавить данную транзакцию?
    </string>
    <string name="add">Добавить</string>
</resources>