<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:transitionName="@string/asset_details_transition_name"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.asset.AssetDetailsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/asset_balance"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=": "
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/balance_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-500 руб."
                        android:textSize="18sp"
                        android:textColor="@color/negative"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:text="@string/asset_type"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=": "
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/type_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:text="Карта"
                        android:textSize="18sp"/>

                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <Button
                    android:transitionName="@string/add_transaction_transition_name"
                    android:id="@+id/transaction_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_transaction"
                    android:textAlignment="viewStart"
                    app:icon="@drawable/ic_baseline_add_task_24"
                    app:iconPadding="20dp"/>

                <Button
                    android:transitionName="@string/transfer_transition_name"
                    android:id="@+id/transfer_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/transfer_action"
                    android:textAlignment="viewStart"
                    app:icon="@drawable/ic_baseline_cached_24"
                    app:iconPadding="20dp"/>

                <Button
                    android:id="@+id/delete_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_asset"
                    android:textAlignment="viewStart"
                    app:icon="@drawable/ic_baseline_delete_outline_24"
                    app:iconPadding="20dp"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>