<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:transitionName="@string/edit_shared_transition_name"
    android:background="?android:attr/windowBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.asset.CreateAssetFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/top_bar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/new_asset"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"/>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_text_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/asset_name"
                    app:startIconDrawable="@drawable/ic_baseline_text_snippet_24"
                    app:startIconContentDescription="@string/asset_name"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:counterEnabled="true"
                    app:counterMaxLength="20">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/balance_text_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/asset_balance"
                    app:suffixText="@string/rub_suffix"
                    app:startIconDrawable="@drawable/ic_baseline_attach_money_24"
                    app:startIconContentDescription="@string/asset_balance"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/balance_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal|numberSigned"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/type_text_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/asset_type"
                    app:startIconDrawable="@drawable/ic_baseline_credit_card_24"
                    app:startIconContentDescription="@string/asset_type"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/type_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/create_asset"
        app:icon="@drawable/ic_baseline_add_card_24" />

</RelativeLayout>