<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionName="@string/add_transaction_transition_name">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/top_bar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/new_transaction"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/title_text_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/transaction_title"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:startIconContentDescription="@string/transaction_title"
                    app:startIconDrawable="@drawable/ic_baseline_text_snippet_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/title_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rubikregular"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/amount_text_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/transaction_amount"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:startIconContentDescription="@string/transaction_amount"
                    app:startIconDrawable="@drawable/ic_baseline_attach_money_24"
                    app:suffixText="@string/rub_suffix">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/amount_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rubikregular"
                        android:inputType="numberDecimal|numberSigned" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/category_text_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/category"
                    app:errorEnabled="true"
                    app:startIconContentDescription="@string/category"
                    app:startIconDrawable="@drawable/ic_baseline_notes_24">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/category_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rubikregular"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/target_text_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/asset_name"
                    app:errorEnabled="true"
                    app:startIconContentDescription="@string/asset_name"
                    app:startIconDrawable="@drawable/ic_baseline_credit_card_24">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/target_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rubikregular"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/rubiksemibold"
        android:text="@string/create_transaction"
        app:icon="@drawable/ic_baseline_add_task_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>